# tcm-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: auto_detection.rs  basic_usage.rs  format_conversion.rs  format_conversion_dynamic.rs  input_types.rs  test_lossless_conversion.rs  v2_to_v1_conversion.rs
examples/data/: longv2.tcm  restartv1.tcm  restartv2.tcm
src/: error.rs  input.rs  lib.rs  meta.rs  replay.rs
tests/: content_validation.rs  integration_tests.rs  read_only_tests.rs
